# gha-dirtree-to-readme

./: CHANGELOG.md  README.md  SECURITY.md  action.yaml  pyproject.toml
.github/workflows/: bump-my-version.yaml  codeql.yaml  generate-deploy-mkdocs-ghpages.yaml  links-fail-fast.yaml  pytest.yaml  ruff.yaml  test-dirtree-readme-action.yaml
src/: app.py  utils.py
tests/: test_app.py  test_utils.py
