[project]
version = "1.1.0"
name = "dirtree-readme-action"
description = "Copy directory tree into file, e.g. README.md, instead of manual effort."
authors = [
    {name = "qte77", email = "qte@77.gh"}
]
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

docs = [
    "griffe>=1.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-section-index>=0.3.8",
    "mkdocstrings[python]>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
package = true
exclude-newer = "2026-03-17T00:00:00Z"

[tool.ruff]
target-version = "py312"
src = ["scripts", "src", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "E203",  # Whitespace before ':'
]
unfixable = ["B"]

[tool.bumpversion]
current_version = "1.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "![Version](https://img.shields.io/badge/version-{current_version}-8A2BE2)"
replace = "![Version](https://img.shields.io/badge/version-{new_version}-8A2BE2)"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]
"""
replace = """
## [Unreleased]

---

## [{new_version}] - {now:%Y-%m-%d}
"""